--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,18 @@
 body{
     margin: 0;
     text-align: center;
-    font-family: 'Merriweather', serif;;
+    font-family: 'Merriweather', serif;
+    color: #40514E
 
+}
+hr{
+    width: 4%;
+    border: 6px dotted #EAF6F6;
+    border-bottom: none;
+    margin:100px auto;
+}
+p{
+    line-height:2;
 }
 h1{
     margin: 50px auto 0 auto;
@@ -15,6 +25,7 @@ h2{
     font-size: 2.5em;
     color: #66BFBF;
     font-weight: normal;
+    padding-bottom: 10px;
     
 }
 h3{
@@ -23,6 +34,18 @@ h3{
 }
 a{
     color: #11999E;
+    font-family: 'Montserrat', serif;
+    font-weight: bold;
+    text-decoration: none;
+    margin:10px 20px;
+}
+a:hover{
+    color: #EAF6F6;
+}
+
+.intro{
+    width:30%;
+    margin:auto;
 }
 .top-container{
  background-color:#E4f9f5;
@@ -30,26 +53,91 @@ a{
  padding-top:100px;
  
 }
+.middle-container{
+    margin:100px 0;
+}
+.bottom-container{
+    background-color: #66BFBF;
+    padding:50px 0 20px;
+}
 .top-cloud{
     position:absolute;
     right:300px;
-    top: 50px;
+    top: 40px;
 }
 .bottom-cloud{
     position: absolute;
+    left:250px;
+    bottom:300px;
 }
-.profile-picture{
+.skill-row{
+    width:50%;
+    margin:100px auto 100px auto;
+    text-align:left;
+    line-height:2;
+}
+.profile-icon{
     border-radius:50%;
     height:200px;
     width:200px;
 }
 .skills-icon{
     border-radius:50%;
-    height:300px;
-    width:300px;
+    width:25%;
+    float:left;
+    margin-right: 30px;
 }
 .media-icon{
     border-radius:50%;
-    height:3    00px;
-    width:300px;
+    width:22%;
+    float:right;
+    margin-left: 30px;
 }
+.contact-message{
+    width:40%;
+    margin:40px auto 60px;
+}
+.btn {
+    background: #3D94F6;
+    background-image: -webkit-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -moz-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -ms-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -o-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -webkit-gradient(to bottom, #3D94F6, #1E62D0);
+    -webkit-border-radius: 44px;
+    -moz-border-radius: 44px;
+    border-radius: 44px;
+    height: 8px;
+    line-height: 8px;
+    color: #FFFFFF;
+    font-family: 'Montserrat', sans-serif;  
+    width: 117px;
+    font-size: 15px;
+    font-weight: 200;
+    padding: 25px;
+    text-shadow: 1px 4px 10px #000000;
+    border: solid #337FED 1px;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    text-align: center;
+ }
+ 
+ .btn:hover {
+    border: solid #337FED 1px;
+    background: #30E3CB;
+    background-image: -webkit-linear-gradient(top, #30E3CB, #2BC4AD);
+    background-image: -moz-linear-gradient(top, #30E3CB, #2BC4AD);
+    background-image: -ms-linear-gradient(top, #30E3CB, #2BC4AD);
+    background-image: -o-linear-gradient(top, #30E3CB, #2BC4AD);
+    background-image: -webkit-gradient(to bottom, #30E3CB, #2BC4AD);
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    text-decoration: none;
+ }
+ .copyright {
+     color: #EAF6F6;
+     padding:20px 0;
+     font: size 0.75rem;
+ }
